Replace Guava’s functional primitives with Java’s native ones